Added the map name to folder structure in all files

--- a/tests/eval_shtm_plotting.ipynb
+++ b/tests/eval_shtm_plotting.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "shtm.experiment_num = 1\n",
     "# shtm.p.experiment.id = \"bss2-onchip_wo-diw_s1\"\n",
-    "folder_path = get_experiment_folder(shtm, shtm.p.experiment.type, shtm.p.experiment.id, shtm.experiment_num,\n",
+    "folder_path = get_experiment_folder(shtm.p.experiment.type, shtm.p.experiment.id, shtm.experiment_num, shtm.p.experiment.map_name,\n",
     "                                            experiment_subnum=shtm.experiment_subnum, instance_id=shtm.instance_id)\n",
     "file_path_fig = join(folder_path, \"events\")\n",
     "\n",
