--- a/tests/opt_shtm_grid.ipynb
+++ b/tests/opt_shtm_grid.ipynb
@@ -87,7 +87,8 @@
     "experiment_type = ExperimentType.OPT_GRID\n",
     "model_type = SHTMTotal\n",
     "experiment_id = \"no-calib_on-chip_no-dyn-inh\"\n",
-    "experiment_num = None"
+    "experiment_num = None\n",
+    "experiment_map = None"
    ]
   },
   {
@@ -111,6 +112,7 @@
     "opt = GridSearch(experiment_type=experiment_type,\n",
     "                 model_type=model_type,\n",
     "                 experiment_id=experiment_id,\n",
+    "                 experiment_map=experiment_map,\n",
     "                 experiment_num=experiment_num\n",
     "                 )\n",
     "\n",
