Updated shtm single exp test

--- a/tests/exp_shtm_single.ipynb
+++ b/tests/exp_shtm_single.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "source": [
     "import sys\n",
-    "import os \n",
+    "import os\n",
     "import warnings\n",
     "import numpy as np\n",
     "\n",
@@ -139,15 +139,18 @@
     "# to get exactly one execution at the end of each runtime\n",
     "if RuntimeConfig.plasticity_location == PlasticityLocation.ON_CHIP:\n",
     "    shtm.init_plasticity_rule()\n",
-    "    \n",
-    "finished_preprocessing = False\n",
-    "while not finished_preprocessing:\n",
-    "    try:\n",
-    "        shtm.init_neurons()\n",
-    "    except HardwareError as e:\n",
-    "        log.error(\"Experienced Hardware error. Trying again.\")\n",
-    "    else:\n",
-    "        finished_preprocessing = True\n",
+    "    finished_preprocessing = False\n",
+    "\n",
+    "    while not finished_preprocessing:\n",
+    "        try:\n",
+    "            shtm.init_neurons()\n",
+    "        except HardwareError as e:\n",
+    "            log.error(\"Experienced Hardware error. Trying again.\")\n",
+    "        else:\n",
+    "            finished_preprocessing = True\n",
+    "else:    \n",
+    "    shtm.init_neurons()\n",
+    "\n",
     "shtm.init_connections(debug=debug)\n",
     "shtm.init_external_input()\n",
     "\n",
@@ -169,8 +172,8 @@
    "metadata": {},
    "source": [
     "# RuntimeConfig.subnum_digits = 4\n",
-    "# shtm = SHTMTotal.load_full_state(SHTMTotal, \"org_s1\", 1, experiment_subnum=2,\n",
-    "#                                  experiment_type=ExperimentType.EVAL_MULTI)"
+    "# shtm = SHTMTotal.load_full_state(network_type=SHTMTotal, experiment_id=\"eval\", experiment_num=3, experiment_map=\"path-planning_02\",\n",
+    "#                                  experiment_type=ExperimentType.EVAL_SINGLE)"
    ],
    "outputs": [],
    "execution_count": null
@@ -190,7 +193,7 @@
     "scrolled": true,
     "tags": []
    },
-   "source": "shtm.run(steps=1, plasticity_enabled=True)",
+   "source": "shtm.run(steps=50, plasticity_enabled=True)",
    "outputs": [],
    "execution_count": null
   },
@@ -202,13 +205,13 @@
     "from shtmbss2.core.data import get_experiment_folder\n",
     "\n",
     "shtm.plot_events(neuron_types=\"all\", size=(24, 10), \n",
-    "                 run_id=0,\n",
+    "                 # run_id=0,\n",
     "                 show_grid=False,\n",
     "                 separate_seqs=False,\n",
-    "                 x_lim_upper=1000\n",
-    "            )\n"
+    "                 # x_lim_upper=1000\n",
+    "            )"
    ],
-   "id": "69313ddcd0eb070d",
+   "id": "73c888ceb954e56c",
    "outputs": [],
    "execution_count": null
   },
@@ -227,11 +230,8 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "shtm.map.plot_graph(arrows=True)\n",
-    "# shtm.map.plot_graph_history(arrows=True)"
-   ],
-   "id": "c17338e4df425fde",
+   "source": "shtm.save_full_state()",
+   "id": "9e09ed3f0b08549",
    "outputs": [],
    "execution_count": null
   },
@@ -249,7 +249,15 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "# shtm.spike_times_ext",
+   "source": [
+    "from shtmbss2.core.helpers import id_to_symbol\n",
+    "\n",
+    "\n",
+    "for i_sym in range(shtm.p.network.num_symbols):\n",
+    "    print(f\"Symbol:  {id_to_symbol(i_sym)}\")\n",
+    "    spikes = [s[0] for s in shtm.neuron_events[NeuronType.Soma][i_sym] if len(s) > 0 ]\n",
+    "    print(np.round(np.min(spikes), 2))"
+   ],
    "id": "b14d57c29dad27a4",
    "outputs": [],
    "execution_count": null
@@ -263,8 +271,43 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "shtm.set_state(NetworkState.REPLAY)",
+   "source": [
+    "shtm = SHTMTotal.load_full_state(network_type=SHTMTotal, \n",
+    "                                 experiment_id=\"eval\", \n",
+    "                                 experiment_num=1, \n",
+    "                                 experiment_map=\"ambiguous_03\",\n",
+    "                                 # experiment_map=\"path-planning_02\",\n",
+    "                                 experiment_type=ExperimentType.EVAL_SINGLE, \n",
+    "                                 custom_params={\n",
+    "                                     # \"replay.threshold_delta_t_up\": 60,\n",
+    "                                     # \"replay.max_scaling_loc\": 0.3\n",
+    "                                                }\n",
+    "                                 )"
+   ],
+   "id": "cf87b1d761d09a0c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "shtm.set_state(NetworkState.REPLAY, \n",
+    "               # target=SYMBOLS['J']\n",
+    "               )"
+   ],
    "id": "7fc976f255ad7424",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# shtm.neuron_thresholds_hist\n",
+    "# shtm.p.replay.threshold_delta_t_up = 60"
+   ],
+   "id": "f50d60ad43e683a7",
    "outputs": [],
    "execution_count": null
   },
@@ -275,14 +318,8 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "shtm.run(steps=1, plasticity_enabled=False)\n",
-    "\n",
-    "shtm.plot_events(neuron_types=\"all\", size=(24, 10), \n",
-    "                 run_id=0,\n",
-    "                 show_grid=False,\n",
-    "                 separate_seqs=True,\n",
-    "                 # x_lim_upper=300\n",
-    "            )"
+    "shtm.run(steps=2, plasticity_enabled=False, runtime=1200)\n",
+    "shtm.print_thresholds()"
    ],
    "outputs": [],
    "execution_count": null
@@ -291,18 +328,24 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "%matplotlib inline\n",
+    "shtm.p_plot.load_default_params()\n",
     "\n",
-    "shtm.run(steps=1, plasticity_enabled=False)\n",
-    "\n",
-    "shtm.plot_events(neuron_types=\"all\", size=(24, 10), \n",
-    "                 run_id=0,\n",
+    "shtm.plot_events(neuron_types=\"all\", size=(15, 12), \n",
+    "                 # run_id=0,\n",
     "                 show_grid=False,\n",
     "                 separate_seqs=True,\n",
-    "                 x_lim_upper=300\n",
+    "                 # x_lim_upper=1200,\n",
+    "                 replay_runtime=200,\n",
+    "                 # replay_runtime=340,\n",
+    "                 plot_dendritic_trace=False,\n",
+    "                 enable_y_ticks=False,\n",
+    "                 x_tick_step=80,\n",
+    "                 fig_title=\"Path Planning\",\n",
+    "                 plot_thresholds=True,\n",
+    "                # file_path=\"./eval_test\"\n",
     "            )"
    ],
-   "id": "df2f69f9f9ee5d74",
+   "id": "f8198068aa3fd828",
    "outputs": [],
    "execution_count": null
   },
@@ -310,52 +353,77 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "shtm.run(steps=1, plasticity_enabled=False)\n",
+    "shtm.p_plot.load_default_params()\n",
     "\n",
+    "shtm.plot_events(neuron_types=\"all\", size=(15, 12), \n",
+    "                 # run_id=0,\n",
+    "                 show_grid=False,\n",
+    "                 separate_seqs=True,\n",
+    "                 # x_lim_upper=1200,\n",
+    "                 replay_runtime=200,\n",
+    "                 # replay_runtime=340,\n",
+    "                 plot_dendritic_trace=False,\n",
+    "                 enable_y_ticks=False,\n",
+    "                 x_tick_step=80,\n",
+    "                 fig_title=\"Path Planning\",\n",
+    "                 plot_thresholds=True,\n",
+    "                # file_path=\"./eval_test\"\n",
+    "            )"
+   ],
+   "id": "607aebf1fa294da7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "shtm.p_plot.load_default_params()\n",
+    "\n",
+    "shtm.save_plot_events(self=shtm, neuron_types=\"all\", size=(15, 12), \n",
+    "                      # run_id=0,\n",
+    "                      show_grid=False,\n",
+    "                      separate_seqs=True,\n",
+    "                      # x_lim_upper=1200,\n",
+    "                      replay_runtime=200,     # ambiguous\n",
+    "                      # replay_runtime=340,       # path-planning\n",
+    "                      plot_dendritic_trace=False,\n",
+    "                      enable_y_ticks=False,\n",
+    "                      x_tick_step=80,\n",
+    "                      plot_thresholds=True,\n",
+    "                      # fig_title=\"Path Planning (A -> J)\"\n",
+    "                      # fig_title=\"Place Disambiguation & Path Planning 1\"\n",
+    "                      # fig_title=\"Place Disambiguation 1\"\n",
+    "                      fig_title=\"Place Disambiguation 2a\"\n",
+    "                      # fig_title=\"Place Disambiguation 2b\"\n",
+    "                 \n",
+    "            )"
+   ],
+   "id": "85f0c387f00a6b92",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# shtm.map.plot_graph(arrows=True)\n",
+    "shtm.save_plot_graph()\n",
+    "\n",
+    "# shtm.map.graph_history"
+   ],
+   "id": "c151e56c81436d37",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
     "%matplotlib inline\n",
     "from shtmbss2.core.data import get_experiment_folder\n",
     "\n",
-    "shtm.plot_events(neuron_types=\"all\", size=(24, 10), \n",
-    "                 run_id=0,\n",
-    "                 show_grid=False,\n",
-    "                 separate_seqs=True,\n",
-    "                 x_lim_upper=300\n",
-    "            )"
-   ],
-   "id": "a8bd54e4b5c62a6e",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "# shtm.neuron_events[NeuronType.InhibitoryGlobal][0]\n",
-    "from shtmbss2.core.helpers import id_to_symbol\n",
-    "for i in range(shtm.p.network.num_symbols):\n",
-    "    print(f\"{id_to_symbol(i)}: {round(shtm.neurons_exc[i].get('V_th'), 3)}\")\n",
-    "    # shtm.exc_to_inh_global[i].set(weight=0)"
-   ],
-   "id": "c78d51d3d95b78ff",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "shtm.exc_to_inh_global[0].get(\"weight\", format='array')",
-   "id": "736c02f55d4f6653",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "%matplotlib inline\n",
-    "from shtmbss2.core.data import get_experiment_folder\n",
-    "\n",
-    "shtm.plot_events(neuron_types=\"all\", size=(24, 10), \n",
+    "shtm.plot_events(neuron_types=\"all\", size=(6, 10), \n",
     "                 run_id=0,\n",
     "                 show_grid=False,\n",
     "                 separate_seqs=True,\n",
@@ -410,14 +478,14 @@
    "execution_count": null
   },
   {
-   "cell_type": "code",
-   "id": "01b7c392-b7db-4124-9223-8cd620c9cfca",
    "metadata": {},
+   "cell_type": "code",
    "source": [
     "%matplotlib inline\n",
     "\n",
     "shtm.plot_permanence_history(plot_con_ids=\"all\")"
    ],
+   "id": "384d12a9e520b6c2",
    "outputs": [],
    "execution_count": null
   },
@@ -648,14 +716,22 @@
    "execution_count": null
   },
   {
-   "cell_type": "code",
-   "id": "a46a6540-dbae-4924-9b21-a55a8a69420c",
    "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "3edfdf046fae85a5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
     "%matplotlib inline\n",
     "\n",
     "shtm.plot_v_exc(alphabet_range=[0], neuron_range='all', neuron_type=NeuronType.Dendrite, runtime=runtime, show_legend=False)"
    ],
+   "id": "94e8968bdd87f47",
    "outputs": [],
    "execution_count": null
   },
