Renamed module from shtm4pynn to neuroseq

--- a/tests/eval_bss2_neurons-synapses.ipynb
+++ b/tests/eval_bss2_neurons-synapses.ipynb
@@ -136,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mINFO \u001b[0m 07:32:43,326  demo_helpers Using setup hxcube7fpga0chip57_1\n"
+      "\u001B[32mINFO \u001B[0m 07:32:43,326  demo_helpers Using setup hxcube7fpga0chip57_1\n"
      ]
     }
    ],
@@ -229,12 +229,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARN \u001b[0m 07:59:15,860  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unexpected peer disconnection.\n",
-      "\u001b[33mWARN \u001b[0m 07:59:15,885  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unexpected peer disconnection.\n",
-      "\u001b[33mWARN \u001b[0m 07:59:16,901  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unable to establish network connection. Connection refused\n",
-      "\u001b[33mWARN \u001b[0m 07:59:17,912  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unable to establish network connection. Connection refused\n",
-      "\u001b[33mWARN \u001b[0m 07:59:18,936  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unexpected peer disconnection.\n",
-      "\u001b[33mWARN \u001b[0m 07:59:19,958  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unexpected peer disconnection.\n"
+      "\u001B[33mWARN \u001B[0m 07:59:15,860  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unexpected peer disconnection.\n",
+      "\u001B[33mWARN \u001B[0m 07:59:15,885  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unexpected peer disconnection.\n",
+      "\u001B[33mWARN \u001B[0m 07:59:16,901  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unable to establish network connection. Connection refused\n",
+      "\u001B[33mWARN \u001B[0m 07:59:17,912  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unable to establish network connection. Connection refused\n",
+      "\u001B[33mWARN \u001B[0m 07:59:18,936  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unexpected peer disconnection.\n",
+      "\u001B[33mWARN \u001B[0m 07:59:19,958  lib-rcf.OnDemandUpload.loop_upload Error while uploading: Unexpected peer disconnection.\n"
      ]
     }
    ],
