--- a/tests/eval_bss2_noise.ipynb
+++ b/tests/eval_bss2_noise.ipynb
@@ -131,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mINFO \u001b[0m 12:42:25,246  demo_helpers Using setup hxcube7fpga0chip57_1\n"
+      "\u001B[32mINFO \u001B[0m 12:42:25,246  demo_helpers Using setup hxcube7fpga0chip57_1\n"
      ]
     },
     {
