--- a/tests/exp_shtm_single.ipynb
+++ b/tests/exp_shtm_single.ipynb
@@ -48,9 +48,9 @@
     "np.set_printoptions(threshold=np.inf, suppress=True, linewidth=np.inf)\n",
     "warnings.filterwarnings(action='ignore', category=UserWarning)\n",
     "\n",
-    "import shtmbss2.addsrc\n",
-    "from shtmbss2.common.config import *\n",
-    "from shtmbss2.core.logging import log"
+    "import neuroseq.addsrc\n",
+    "from neuroseq.common.config import *\n",
+    "from neuroseq.core.logging import log"
    ],
    "outputs": [],
    "execution_count": null
@@ -80,11 +80,11 @@
     "offset = 0\n",
     "if RuntimeConfig.backend == Backends.BRAIN_SCALES_2:\n",
     "    from pynn_brainscales import brainscales2 as pynn\n",
-    "    from shtmbss2.brainscales2.network import SHTMTotal\n",
+    "    from neuroseq.brainscales2.network import SHTMTotal\n",
     "elif RuntimeConfig.backend == Backends.NEST:\n",
-    "    from shtmbss2.nest.network import SHTMTotal\n",
+    "    from neuroseq.nest.network import SHTMTotal\n",
     "    \n",
-    "from shtmbss2.common.network import NeuronType, RecTypes"
+    "from neuroseq.common.network import NeuronType, RecTypes"
    ],
    "outputs": [],
    "execution_count": null
@@ -202,12 +202,12 @@
    "cell_type": "code",
    "source": [
     "%matplotlib inline\n",
-    "from shtmbss2.core.data import get_experiment_folder\n",
+    "from neuroseq.core.data import get_experiment_folder\n",
     "\n",
     "shtm.plot_events(neuron_types=\"all\", size=(24, 10), \n",
     "                 # run_id=0,\n",
     "                 show_grid=False,\n",
-    "                 separate_seqs=False,\n",
+    "                 separate_seqs=True,\n",
     "                 # x_lim_upper=1000\n",
     "            )"
    ],
@@ -250,7 +250,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "from shtmbss2.core.helpers import id_to_symbol\n",
+    "from neuroseq.core.helpers import id_to_symbol\n",
     "\n",
     "\n",
     "for i_sym in range(shtm.p.network.num_symbols):\n",
@@ -341,7 +341,7 @@
     "                 enable_y_ticks=False,\n",
     "                 x_tick_step=80,\n",
     "                 fig_title=\"Path Planning\",\n",
-    "                 plot_thresholds=True,\n",
+    "                 plot_thresholds=False,\n",
     "                # file_path=\"./eval_test\"\n",
     "            )"
    ],
@@ -421,7 +421,7 @@
    "cell_type": "code",
    "source": [
     "%matplotlib inline\n",
-    "from shtmbss2.core.data import get_experiment_folder\n",
+    "from neuroseq.core.data import get_experiment_folder\n",
     "\n",
     "shtm.plot_events(neuron_types=\"all\", size=(6, 10), \n",
     "                 run_id=0,\n",
@@ -634,7 +634,7 @@
    "metadata": {},
    "source": [
     "%matplotlib inline\n",
-    "from shtmbss2.common.network import NeuronType, RecTypes\n",
+    "from neuroseq.common.network import NeuronType, RecTypes\n",
     "\n",
     "plot_v_exc(shtm, alphabet_range=[3], neuron_range=\"all\", neuron_type=NeuronType.Soma, runtime=100)"
    ],
@@ -647,7 +647,7 @@
    "source": [
     "from tabulate import tabulate\n",
     "import matplotlib.pyplot as plt\n",
-    "from shtmbss2.core.helpers import id_to_symbol\n",
+    "from neuroseq.core.helpers import id_to_symbol\n",
     "\n",
     "def plot_v_exc(self, alphabet_range, neuron_range='all', size=None, neuron_type=NeuronType.Soma, runtime=None,\n",
     "               show_legend=False, file_path=None):\n",
