Changed path definitions in config to be dynamic

--- a/scripts/eval_shtm_performance.ipynb
+++ b/scripts/eval_shtm_performance.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "code",
    "source": [
     "config_file_name = \"shtm2bss_config_evaluation.yaml\"\n",
-    "config = load_yaml(PATH_CONFIG, config_file_name)[evaluation_type]\n",
+    "config = load_yaml(RuntimeConfig.Paths.config, config_file_name)[evaluation_type]\n",
     "\n",
     "exp_ids = config[\"exp_ids\"]\n",
     "backends = config[\"backends\"]\n",
@@ -83,7 +83,7 @@
     "\n",
     "for i_exp, exp_id in enumerate(exp_ids):\n",
     "    backend = backends[i_exp]\n",
-    "    folder_path = join(EXPERIMENT_FOLDERS[backend], EXPERIMENT_SUBFOLDERS[ExperimentType.EVAL_MULTI])\n",
+    "    folder_path = join(RuntimeConfig.Paths.folders_experiment[backend], EXPERIMENT_SUBFOLDERS[ExperimentType.EVAL_MULTI])\n",
     "    file_path = join(folder_path, f\"SHTMTotal_{exp_id}\", \"performance.csv\")\n",
     "    with open(file_path, 'r') as csvfile:\n",
     "        csv_reader = csv.reader(csvfile)\n",
