--- a/scripts/exp_shtm_multi.ipynb
+++ b/scripts/exp_shtm_multi.ipynb
@@ -189,7 +189,7 @@
     "\n",
     "pf_dict = pf.get_performance_dict(final_result=True, running_avgs=p.performance.running_avgs)\n",
     "\n",
-    "pf_file_path = join(EXPERIMENT_FOLDERS[RuntimeConfig.backend], EXPERIMENT_SUBFOLDERS[ExperimentType.EVAL_MULTI], f\"SHTMTotal_{experiment_id}_{experiment_num:02d}\", \"performance.csv\")\n",
+    "pf_file_path = join(RuntimeConfig.Paths.folders_experiment[RuntimeConfig.backend], EXPERIMENT_SUBFOLDERS[ExperimentType.EVAL_MULTI], f\"SHTMTotal_{experiment_id}_{experiment_num:02d}\", \"performance.csv\")\n",
     "\n",
     "with open(pf_file_path, 'w') as csvfile:\n",
     "    csvwriter = csv.writer(csvfile)\n",
