Updated module name for all remaining files from shtmbss2 to neuroseq

--- a/scripts/conv_params_to_latex.ipynb
+++ b/scripts/conv_params_to_latex.ipynb
@@ -21,10 +21,10 @@
     "np.set_printoptions(threshold=np.inf, suppress=True, linewidth=np.inf)\n",
     "warnings.filterwarnings(action='ignore', category=UserWarning)\n",
     "\n",
-    "import shtmbss2.addsrc\n",
-    "# from shtmbss2.common.config import RuntimeConfig, Backends\n",
-    "from shtmbss2.common.config import *\n",
-    "from shtmbss2.core.logging import log"
+    "import neuroseq.addsrc\n",
+    "# from neuroseq.common.config import RuntimeConfig, Backends\n",
+    "from neuroseq.common.config import *\n",
+    "from neuroseq.core.logging import log"
    ],
    "id": "99fc393fe5a6d6f6",
    "outputs": [],
@@ -43,15 +43,15 @@
    "cell_type": "code",
    "source": [
     "if RuntimeConfig.backend == Backends.BRAIN_SCALES_2:\n",
-    "    from shtmbss2.brainscales2.network import SHTMTotal\n",
-    "    from shtmbss2.brainscales2.hardware import hardware_initialization\n",
+    "    from neuroseq.brainscales2.network import SHTMTotal\n",
+    "    from neuroseq.brainscales2.hardware import hardware_initialization\n",
     "    hardware_initialization()\n",
     "elif RuntimeConfig.backend == Backends.NEST:\n",
-    "    from shtmbss2.nest.network import SHTMTotal\n",
+    "    from neuroseq.nest.network import SHTMTotal\n",
     "\n",
-    "from shtmbss2.core.parameters import NetworkParameters\n",
-    "from shtmbss2.core.helpers import Latex\n",
-    "from shtmbss2.core.data import load_yaml"
+    "from neuroseq.core.parameters import NetworkParameters\n",
+    "from neuroseq.core.helpers import Latex\n",
+    "from neuroseq.core.data import load_yaml"
    ],
    "id": "e43fb1db4dfa5c21",
    "outputs": [],
@@ -99,7 +99,7 @@
     "p.load_default_params()\n",
     "p_dict = p.dict()\n",
     "\n",
-    "p_conv_path = join(PY_PKG_PATH, \"config\")\n",
+    "p_conv_path = join(RuntimeConfig.Paths.package, \"config\")\n",
     "p_conv = load_yaml(p_conv_path, \"shtm2bss_config_parameter-conversion.yaml\")\n"
    ],
    "id": "fe38778de8738e7",
