--- a/scripts/eval_bss2_neurons-synapses.ipynb
+++ b/scripts/eval_bss2_neurons-synapses.ipynb
@@ -35,25 +35,25 @@
     "pkg_path = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
     "sys.path.append(pkg_path)\n",
     "\n",
-    "import shtmbss2.addsrc\n",
+    "import neuroseq.addsrc\n",
     "\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "from tabulate import tabulate\n",
     "from abc import ABC\n",
     "\n",
-    "import shtmbss2.brainscales2.patches\n",
-    "from shtmbss2.brainscales2.config import *\n",
-    "from shtmbss2.brainscales2.patches import patch_pynn_calibration\n",
-    "from shtmbss2.brainscales2.plasticity import PlasticityOnChip\n",
-    "from shtmbss2.core.logging import log\n",
-    "from shtmbss2.core.helpers import id_to_symbol\n",
-    "import shtmbss2.common.network as network\n",
-    "from shtmbss2.common.config import NeuronType, RecTypes\n",
-    "from shtmbss2.brainscales2.network import SHTMTotal\n",
-    "from shtmbss2.common.config import *\n",
-    "from shtmbss2.core.parameters import Parameters\n",
-    "from shtmbss2.brainscales2.hardware import hardware_initialization\n",
+    "import neuroseq.brainscales2.patches\n",
+    "from neuroseq.brainscales2.config import *\n",
+    "from neuroseq.brainscales2.patches import patch_pynn_calibration\n",
+    "from neuroseq.brainscales2.plasticity import PlasticityOnChip\n",
+    "from neuroseq.core.logging import log\n",
+    "from neuroseq.core.helpers import id_to_symbol\n",
+    "import neuroseq.common.network as network\n",
+    "from neuroseq.common.config import NeuronType, RecTypes\n",
+    "from neuroseq.brainscales2.network import SHTMTotal\n",
+    "from neuroseq.common.config import *\n",
+    "from neuroseq.core.parameters import Parameters\n",
+    "from neuroseq.brainscales2.hardware import hardware_initialization\n",
     "\n",
     "\n",
     "from pynn_brainscales import brainscales2 as pynn\n",
