--- a/scripts/eval_shtm_performance.ipynb
+++ b/scripts/eval_shtm_performance.ipynb
@@ -22,10 +22,10 @@
     "np.set_printoptions(threshold=np.inf, suppress=True, linewidth=np.inf)\n",
     "warnings.filterwarnings(action='ignore', category=UserWarning)\n",
     "\n",
-    "import shtmbss2.addsrc\n",
-    "from shtmbss2.common.config import *\n",
-    "from shtmbss2.core.data import load_yaml\n",
-    "from shtmbss2.core.helpers import Latex"
+    "import neuroseq.addsrc\n",
+    "from neuroseq.common.config import *\n",
+    "from neuroseq.core.data import load_yaml\n",
+    "from neuroseq.core.helpers import Latex"
    ],
    "id": "16853bf3f9aec56",
    "outputs": [],
