--- a/scripts/eval_shtm_plotting.ipynb
+++ b/scripts/eval_shtm_plotting.ipynb
@@ -23,9 +23,9 @@
     "np.set_printoptions(threshold=np.inf, suppress=True, linewidth=np.inf)\n",
     "warnings.filterwarnings(action='ignore', category=UserWarning)\n",
     "\n",
-    "import shtmbss2.addsrc\n",
-    "from shtmbss2.common.config import *\n",
-    "from shtmbss2.core.logging import log"
+    "import neuroseq.addsrc\n",
+    "from neuroseq.common.config import *\n",
+    "from neuroseq.core.logging import log"
    ],
    "id": "initial_id"
   },
@@ -50,11 +50,11 @@
     "offset = 0\n",
     "if RuntimeConfig.backend == Backends.BRAIN_SCALES_2:\n",
     "    from pynn_brainscales import brainscales2 as pynn\n",
-    "    from shtmbss2.brainscales2.network import SHTMTotal\n",
+    "    from neuroseq.brainscales2.network import SHTMTotal\n",
     "elif RuntimeConfig.backend == Backends.NEST:\n",
-    "    from shtmbss2.nest.network import SHTMTotal\n",
+    "    from neuroseq.nest.network import SHTMTotal\n",
     "    \n",
-    "from shtmbss2.common.network import NeuronType, RecTypes"
+    "from neuroseq.common.network import NeuronType, RecTypes"
    ],
    "id": "9a137b33463b9ceb"
   },
@@ -83,7 +83,7 @@
    "execution_count": null,
    "source": [
     "%matplotlib inline\n",
-    "from shtmbss2.core.data import get_experiment_folder\n",
+    "from neuroseq.core.data import get_experiment_folder\n",
     "\n",
     "run_length = shtm.p.experiment.runtime / shtm.p.encoding.num_repetitions\n",
     "perf_run = np.ceil(shtm.p.plasticity.execution_start / run_length) - 1\n",
