--- a/scripts/exp_shtm_multi.ipynb
+++ b/scripts/exp_shtm_multi.ipynb
@@ -30,10 +30,10 @@
     "np.set_printoptions(threshold=np.inf, suppress=True, linewidth=np.inf)\n",
     "warnings.filterwarnings(action='ignore', category=UserWarning)\n",
     "\n",
-    "import shtmbss2.addsrc\n",
-    "# from shtmbss2.common.config import RuntimeConfig, Backends\n",
-    "from shtmbss2.common.config import *\n",
-    "from shtmbss2.core.logging import log"
+    "import neuroseq.addsrc\n",
+    "# from neuroseq.common.config import RuntimeConfig, Backends\n",
+    "from neuroseq.common.config import *\n",
+    "from neuroseq.core.logging import log"
    ],
    "outputs": [],
    "execution_count": 1
@@ -65,18 +65,18 @@
    },
    "source": [
     "if RuntimeConfig.backend == Backends.BRAIN_SCALES_2:\n",
-    "    import shtmbss2.brainscales2.patches\n",
-    "    from shtmbss2.brainscales2.network import SHTMTotal\n",
-    "    from shtmbss2.brainscales2.hardware import hardware_initialization\n",
+    "    import neuroseq.brainscales2.patches\n",
+    "    from neuroseq.brainscales2.network import SHTMTotal\n",
+    "    from neuroseq.brainscales2.hardware import hardware_initialization\n",
     "    # hardware_initialization()\n",
     "elif RuntimeConfig.backend == Backends.NEST:\n",
-    "    from shtmbss2.nest.network import SHTMTotal\n",
+    "    from neuroseq.nest.network import SHTMTotal\n",
     "\n",
-    "from shtmbss2.common.network import NeuronType, RecTypes\n",
-    "from shtmbss2.common.executor import ParallelExecutor\n",
-    "from shtmbss2.core.performance import PerformanceMulti\n",
-    "from shtmbss2.core.parameters import NetworkParameters, PlottingParameters\n",
-    "from shtmbss2.core.data import get_experiment_folder    "
+    "from neuroseq.common.network import NeuronType, RecTypes\n",
+    "from neuroseq.common.executor import ParallelExecutor\n",
+    "from neuroseq.core.performance import PerformanceMulti\n",
+    "from neuroseq.core.parameters import NetworkParameters, PlottingParameters\n",
+    "from neuroseq.core.data import get_experiment_folder"
    ],
    "outputs": [
     {
