--- a/scripts/opt_shtm_grid.ipynb
+++ b/scripts/opt_shtm_grid.ipynb
@@ -23,9 +23,9 @@
     "np.set_printoptions(threshold=np.inf, suppress=True, linewidth=np.inf)\n",
     "warnings.filterwarnings(action='ignore', category=UserWarning)\n",
     "\n",
-    "import shtmbss2.addsrc\n",
-    "from shtmbss2.common.config import *\n",
-    "from shtmbss2.core.logging import log"
+    "import neuroseq.addsrc\n",
+    "from neuroseq.common.config import *\n",
+    "from neuroseq.core.logging import log"
    ]
   },
   {
@@ -48,14 +48,14 @@
    "source": [
     "shtm = None\n",
     "if RuntimeConfig.backend == Backends.BRAIN_SCALES_2:\n",
-    "    import shtmbss2.brainscales2.patches\n",
-    "    from shtmbss2.brainscales2.hardware import hardware_initialization\n",
-    "    from shtmbss2.brainscales2.network import SHTMTotal\n",
+    "    import neuroseq.brainscales2.patches\n",
+    "    from neuroseq.brainscales2.hardware import hardware_initialization\n",
+    "    from neuroseq.brainscales2.network import SHTMTotal\n",
     "elif RuntimeConfig.backend == Backends.NEST:\n",
-    "    from shtmbss2.nest.network import SHTMTotal\n",
+    "    from neuroseq.nest.network import SHTMTotal\n",
     "    \n",
-    "from shtmbss2.common.network import NeuronType, RecTypes\n",
-    "from shtmbss2.common.optimization import GridSearch "
+    "from neuroseq.common.network import NeuronType, RecTypes\n",
+    "from neuroseq.common.optimization import GridSearch"
    ]
   },
   {
