--- a/scripts/eval_bss2_noise.ipynb
+++ b/scripts/eval_bss2_noise.ipynb
@@ -37,9 +37,9 @@
     "np.set_printoptions(threshold=np.inf, suppress=True, linewidth=np.inf)\n",
     "warnings.filterwarnings(action='ignore', category=UserWarning)\n",
     "\n",
-    "import shtmbss2.addsrc\n",
-    "from shtmbss2.common.config import *\n",
-    "from shtmbss2.core.logging import log"
+    "import neuroseq.addsrc\n",
+    "from neuroseq.common.config import *\n",
+    "from neuroseq.core.logging import log"
    ]
   },
   {
@@ -64,12 +64,12 @@
     "offset = 0\n",
     "if RuntimeConfig.backend == Backends.BRAIN_SCALES_2:\n",
     "    from pynn_brainscales import brainscales2 as pynn\n",
-    "    from shtmbss2.brainscales2.hardware import hardware_initialization\n",
-    "    from shtmbss2.brainscales2.network import SHTMTotal\n",
+    "    from neuroseq.brainscales2.hardware import hardware_initialization\n",
+    "    from neuroseq.brainscales2.network import SHTMTotal\n",
     "elif RuntimeConfig.backend == Backends.NEST:\n",
-    "    from shtmbss2.nest.network import SHTMTotal\n",
+    "    from neuroseq.nest.network import SHTMTotal\n",
     "    \n",
-    "from shtmbss2.common.network import NeuronType, RecTypes"
+    "from neuroseq.common.network import NeuronType, RecTypes"
    ]
   },
   {
