Updated NetworkState to NetworkMode

--- a/scripts/exp_shtm_single.ipynb
+++ b/scripts/exp_shtm_single.ipynb
@@ -516,7 +516,7 @@
     "                                     # \"replay.threshold_delta_t_up\": 60,\n",
     "                                     # \"replay.max_scaling_loc\": 0.3\n",
     "                                                },\n",
-    "                                 network_mode=NetworkState.PREDICTIVE\n",
+    "                                 network_mode=NetworkMode.PREDICTIVE\n",
     "                                 )"
    ],
    "id": "cf87b1d761d09a0c",
@@ -532,7 +532,7 @@
    },
    "cell_type": "code",
    "source": [
-    "shtm.set_state(NetworkState.REPLAY, \n",
+    "shtm.set_state(NetworkMode.REPLAY,\n",
     "               # target=SYMBOLS['J']\n",
     "               )"
    ],
